--- a/projects/a-pixel-art-editor/package.json
+++ b/projects/a-pixel-art-editor/package.json
@@ -4,11 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "eslint": "^6.1.0"
   },
-  "scripts": {
-    "build": "webpack",
-    "debug": "webpack -d"
+  "installConfig": {
+    "pnp": true
   }
 }
