--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ exercises/20-nodejs/search-tool/.cache
 projects/a-skill-sharing-website/node_modules
 projects/a-skill-sharing-website/dist
 projects/a-skill-sharing-website/.cache
+exercises/22-javascript-and-performance/*/.cache
+exercises/22-javascript-and-performance/*/node_modules
+exercises/22-javascript-and-performance/*/dist
